Wildbeast Conteúdo Características

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>Lobo Cinza</h1>
         <span>da família canis lupus</span>
       </div>
-      <div class="caractetiristicas">
+      <div class="caracteristicas">
         <div>
           <span class="numero">72</span>
           <span class="rotulo">kg</span>
